--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "retokenilitykc",
+  "name": "pocplaywrightjs",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf playwright-report test-results target",
+    "test": "npm run clean && npx bddgen %BDD_TAGS% && npx playwright test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.57.0"
+    "@cucumber/cucumber": "^11.2.0",
+    "@playwright/test": "^1.50.0",
+    "@types/node": "^22.10.2",
+    "dotenv": "^16.4.7",
+    "playwright-bdd": "^8.2.0",
+    "rimraf": "^6.0.1"
+  },
+  "dependencies": {
+    "playwright": "^1.50.0"
   }
 }
